# stackulator-hs

./: .gitignore  CHANGELOG.md  HtmlView.hs  LICENSE  Model.hs  Parser.hs  Server.hs  Stackulator.hs  index.html  shell.nix  stackulator.cabal  stackulator.html
