cabal-version:       2.4
name:                stackulator
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Stackulator, Model, Parser
  other-extensions:    QuasiQuotes
  build-depends:       base ^>=4.12.0.0, mtl ^>=2.2.2, containers ^>=0.6.0.1, text ^>=1.2.3.1, parsec ^>=3.1.13.0
  default-language:    Haskell2010

executable stackulator
  main-is:             HtmlView.hs
  other-extensions:    QuasiQuotes
  build-depends:       base ^>=4.12.0.0, mtl ^>=2.2.2, containers ^>=0.6.0.1, text ^>=1.2.3.1, parsec ^>=3.1.13.0, chili, hsx2hs, ghcjs-base, stackulator
  default-language:    Haskell2010
